# pytetwild

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.rst  pyproject.toml  setup.py
.github/workflows/: build-and-deploy.yml
.github/workflows/.github/workflows/: build-and-deploy.yml
src/: CMakeLists.txt  FTetWildWrapper.cpp  FTetWildWrapper.h  _version.py  _wrapper.pyx
src/pytetwild/: PyfTetWildWrapper.pyi  __init__.py  _accessor.py  _version.py  pytetwild.py
tests/: test_accessor.py  test_pytetwild.py
tests/test_data/: box.stl  csgtree.json  sphere.stl  test_surf.ply  test_tets.msh
